--- a/src/main/webapp/css/login/style.css
+++ b/src/main/webapp/css/login/style.css
@@ -188,5 +188,6 @@ button:active {
 
 .connect a:hover { background-position: center bottom; }
 
-
-
+div.layui-layer-content.layui-layer-padding{
+    color: black !important;
+}
